# aws-lambda-restapis

./: .gitignore  README.md
go/std/transactionsapi/: Makefile  go.mod  package-lock.json  package.json
go/std/transactionsapi/cmd/lambda/: main.go
go/std/transactionsapi/cmd/server/: main.go
go/transactionsapi/: .gitignore  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  serverless.yml
go/transactionsapi/cmd/lambda/: main.go
go/transactionsapi/cmd/server/: main.go
go/transactionsapi/internal/handlers/router/: router.go
rust/actix-web/transactionsapi/: .gitignore  Cargo.toml  Makefile  README.md  invoke.http  package-lock.json  package.json  serverless.yml
rust/actix-web/transactionsapi/src/: lib.rs
rust/rocket/transactionsapi/: .gitignore  Cargo.toml  Makefile  invoke.http  package-lock.json  serverless.yml
rust/rocket/transactionsapi/src/: lib.rs
