[package]
name = "transactionsapi"
version = "0.1.0"
authors = ["alejandroq <quesadaaba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix_lambda = "0.2.0"
actix-service = "1.0.6"
serde = "1.0.104"
log = "0.4"