[package]
name = "transactionsapi"
version = "0.1.0"
authors = ["alejandroq <quesadaaba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_lamb = "0.6.0"
log = "0.4"